@@ -1,5 +1,6 @@
 package com.studyhub.chat_service.service;
 
+import com.studyhub.chat_service.client.UserClient;
 import com.studyhub.chat_service.dto.request.CreateDirectMessageRequest;
 import com.studyhub.chat_service.dto.request.CreateRoomRequest;
 import com.studyhub.chat_service.dto.request.InviteMemberRequest;
@@ -13,20 +14,21 @@ import com.studyhub.chat_service.entity.Room;
 import com.studyhub.chat_service.entity.RoomMember;
 import com.studyhub.chat_service.entity.RoomMemberId;
 import com.studyhub.chat_service.entity.RoomType;
+import com.studyhub.chat_service.event.RoomDeletedEvent;
 import com.studyhub.chat_service.exception.RoomFullException;
 import com.studyhub.chat_service.exception.RoomNotFoundException;
 import com.studyhub.chat_service.exception.UnauthorizedException;
 import com.studyhub.chat_service.repository.RoomMemberRepository;
 import com.studyhub.chat_service.repository.RoomRepository;
+import com.studyhub.common.dto.KeycloakUserIdList;
 import lombok.RequiredArgsConstructor;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -36,12 +38,15 @@ public class RoomService {
 
     private static final int MAX_MEMBERS = 50;
 
+    private final UserClient userClient;
     private final RoomRepository roomRepository;
     private final RoomMemberRepository roomMemberRepository;
+    private final com.studyhub.chat_service.repository.MessageRepository messageRepository;
     private final SimpMessagingTemplate messagingTemplate;
+    private final EventPublisherService eventPublisher;
 
     @Transactional
-    public RoomResponse createRoom(CreateRoomRequest request, Long currentUserId) {
+    public RoomResponse createRoom(CreateRoomRequest request, String currentUserId) {
         log.info("Creating room: {} by user: {}", request.getName(), currentUserId);
 
         Room room = Room.builder()
@@ -49,7 +54,7 @@ public class RoomService {
                 .description(request.getDescription())
                 .creatorId(currentUserId)
                 .isPublic(request.getIsPublic())
-                .roomType(RoomType.GROUP.toString())
+                .roomType(RoomType.GROUP)
                 .maxMembers(MAX_MEMBERS)
                 .build();
 
@@ -65,8 +70,15 @@ public class RoomService {
                 .name("General")
                 .room(savedRoom) // Set bidirectional relationship
                 .build();
-        savedRoom.getChannels().add(generalChannel);
+        if (!Objects.isNull(savedRoom.getChannels())) {
+            savedRoom.getChannels().add(generalChannel);
+        } else {
+            List<Channel> channels = new ArrayList<>();
+            channels.add(generalChannel);
+            savedRoom.setChannels(channels);
+        }
 
+        savedRoom = roomRepository.save(savedRoom);
         // Add creator as owner
         RoomMember creatorMember = RoomMember.builder()
                 .id(new RoomMemberId(savedRoom.getId(), currentUserId))
@@ -78,11 +90,26 @@ public class RoomService {
         // Save again to persist channel (cascade will save the channel)
         savedRoom = roomRepository.save(savedRoom);
 
+        // Publish RoomCreated event to Kafka
+        try {
+            var event = com.studyhub.chat_service.event.RoomCreatedEvent.from(
+                    savedRoom.getId(),
+                    savedRoom.getName(),
+                    savedRoom.getDescription(),
+                    currentUserId,
+                    savedRoom.getRoomType().name(),
+                    savedRoom.getIsPublic(),
+                    savedRoom.getCreatedAt());
+            eventPublisher.publishRoomCreated(event);
+        } catch (Exception e) {
+            log.error("Failed to publish RoomCreated event: {}", e.getMessage(), e);
+        }
+
         return toRoomResponse(savedRoom, currentUserId);
     }
 
     @Transactional
-    public RoomResponse updateRoom(Long roomId, UpdateRoomRequest request, Long currentUserId) {
+    public RoomResponse updateRoom(Long roomId, UpdateRoomRequest request, String currentUserId) {
         log.info("Updating room: {} by user: {}", roomId, currentUserId);
 
         Room room = getRoomOrThrow(roomId);
@@ -107,17 +134,34 @@ public class RoomService {
     }
 
     @Transactional
-    public void deleteRoom(Long roomId, Long currentUserId) {
+    public void deleteRoom(Long roomId, String currentUserId) {
         log.info("Deleting room: {} by user: {}", roomId, currentUserId);
 
         Room room = getRoomOrThrow(roomId);
         validateOwnership(roomId, currentUserId);
 
+        String roomName = room.getName();
+        String creatorId = room.getCreatorId();
+
         roomRepository.delete(room);
+
+        // Publish RoomDeleted event to Kafka
+        try {
+            eventPublisher.publishRoomDeleted(RoomDeletedEvent.from(roomId, roomName, creatorId));
+        } catch (Exception e) {
+            log.error("Failed to publish RoomDeleted event: {}", e.getMessage(), e);
+        }
+
+        // Broadcast deletion to room members via websocket
+        try {
+            messagingTemplate.convertAndSend("/topic/rooms/" + roomId + "/deleted", roomId);
+        } catch (Exception e) {
+            log.error("Failed to broadcast room deletion: {}", e.getMessage(), e);
+        }
     }
 
     @Transactional(readOnly = true)
-    public RoomResponse getRoomById(Long roomId, Long currentUserId) {
+    public RoomResponse getRoomById(Long roomId, String currentUserId) {
         Room room = getRoomOrThrow(roomId);
 
         // Check if user is member for private rooms
@@ -129,12 +173,13 @@ public class RoomService {
     }
 
     @Transactional(readOnly = true)
-    public List<RoomSummary> getUserRooms(Long userId) {
+    public List<RoomSummary> getUserRooms(String userId) {
         log.info("Getting rooms for user: {}", userId);
 
         return roomRepository.findRoomsByUserId(userId).stream()
-                .map(this::toRoomSummary)
-                .collect(Collectors.toList());
+                .filter(room -> room.getRoomType() == RoomType.GROUP)
+                .map(room -> toRoomSummary(room, userId, null))
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -142,12 +187,12 @@ public class RoomService {
         log.info("Getting public rooms");
 
         return roomRepository.findPublicRooms().stream()
-                .map(this::toRoomSummary)
-                .collect(Collectors.toList());
+                .map(room -> toRoomSummary(room, null, null))
+                .toList();
     }
 
     @Transactional
-    public RoomResponse joinRoom(Long roomId, JoinRoomRequest request, Long currentUserId) {
+    public RoomResponse joinRoom(Long roomId, JoinRoomRequest request, String currentUserId) {
         log.info("User: {} joining room: {}", currentUserId, roomId);
 
         Room room = getRoomOrThrow(roomId);
@@ -179,6 +224,20 @@ public class RoomService {
                 .build();
         roomMemberRepository.save(member);
 
+        // Publish UserJoinedRoom event to Kafka
+        try {
+            var event = com.studyhub.chat_service.event.UserJoinedRoomEvent.from(
+                    roomId,
+                    room.getName(),
+                    currentUserId,
+                    "user_" + currentUserId, // TODO: Get actual username from UserClient
+                    "MEMBER",
+                    member.getJoinedAt());
+            eventPublisher.publishUserJoinedRoom(event);
+        } catch (Exception e) {
+            log.error("Failed to publish UserJoinedRoom event: {}", e.getMessage(), e);
+        }
+
         // Broadcast new member to room members via websocket
         try {
             MemberResponse memberResponse = toMemberResponse(member);
@@ -191,7 +250,7 @@ public class RoomService {
     }
 
     @Transactional
-    public void leaveRoom(Long roomId, Long currentUserId) {
+    public void leaveRoom(Long roomId, String currentUserId) {
         log.info("User: {} leaving room: {}", currentUserId, roomId);
 
         Room room = getRoomOrThrow(roomId);
@@ -213,7 +272,7 @@ public class RoomService {
     }
 
     @Transactional
-    public void inviteMember(Long roomId, InviteMemberRequest request, Long currentUserId) {
+    public void inviteMember(Long roomId, InviteMemberRequest request, String currentUserId) {
         log.info("User: {} inviting user: {} to room: {}", currentUserId, request.getUserId(), roomId);
 
         validateMembership(roomId, currentUserId);
@@ -248,7 +307,7 @@ public class RoomService {
     }
 
     @Transactional
-    public void removeMember(Long roomId, Long memberUserId, Long currentUserId) {
+    public void removeMember(Long roomId, String memberUserId, String currentUserId) {
         log.info("User: {} removing user: {} from room: {}", currentUserId, memberUserId, roomId);
 
         validateOwnership(roomId, currentUserId);
@@ -270,14 +329,57 @@ public class RoomService {
     }
 
     @Transactional(readOnly = true)
-    public List<MemberResponse> getRoomMembers(Long roomId, Long currentUserId) {
+    public List<MemberResponse> getRoomMembers(Long roomId, String currentUserId) {
         log.info("Getting members of room: {}", roomId);
 
         validateMembership(roomId, currentUserId);
 
-        return roomMemberRepository.findByRoomId(roomId).stream()
-                .map(this::toMemberResponse)
-                .collect(Collectors.toList());
+        List<RoomMember> roomMembers = roomMemberRepository.findByRoomId(roomId);
+
+        return toMemberResponseList(roomMembers);
+    }
+
+    @Transactional
+    public void transferOwnership(Long roomId, String newOwnerUserId, String currentUserId) {
+        log.info("User: {} transferring ownership of room: {} to user: {}", currentUserId, roomId, newOwnerUserId);
+
+        // Validate current user is owner
+        validateOwnership(roomId, currentUserId);
+
+        // Validate new owner is a member
+        if (!roomRepository.existsMemberInRoom(roomId, newOwnerUserId)) {
+            throw new IllegalArgumentException("New owner must be a member of the room");
+        }
+
+        // Cannot transfer to self
+        if (currentUserId.equals(newOwnerUserId)) {
+            throw new IllegalArgumentException("Cannot transfer ownership to yourself");
+        }
+
+        // Update current owner to regular member
+        RoomMemberId currentOwnerMemberId = new RoomMemberId(roomId, currentUserId);
+        RoomMember currentOwner = roomMemberRepository.findById(currentOwnerMemberId)
+                .orElseThrow(() -> new IllegalStateException("Current owner membership not found"));
+        currentOwner.setIsOwner(false);
+        roomMemberRepository.save(currentOwner);
+
+        // Update new owner
+        RoomMemberId newOwnerMemberId = new RoomMemberId(roomId, newOwnerUserId);
+        RoomMember newOwner = roomMemberRepository.findById(newOwnerMemberId)
+                .orElseThrow(() -> new IllegalArgumentException("New owner membership not found"));
+        newOwner.setIsOwner(true);
+        roomMemberRepository.save(newOwner);
+
+        // Broadcast ownership transfer event
+        try {
+            var transferEvent = new java.util.HashMap<String, Object>();
+            transferEvent.put("previousOwnerId", currentUserId);
+            transferEvent.put("newOwnerId", newOwnerUserId);
+            transferEvent.put("roomId", roomId);
+            messagingTemplate.convertAndSend("/topic/rooms/" + roomId + "/ownership-transferred", transferEvent);
+        } catch (Exception e) {
+            log.error("Failed to broadcast ownership transfer: {}", e.getMessage(), e);
+        }
     }
 
     // Helper methods
@@ -286,13 +388,13 @@ public class RoomService {
                 .orElseThrow(() -> new RoomNotFoundException(roomId));
     }
 
-    private void validateOwnership(Long roomId, Long userId) {
+    private void validateOwnership(Long roomId, String userId) {
         if (!roomRepository.isOwnerOfRoom(roomId, userId)) {
             throw new UnauthorizedException("User is not the owner of this room");
         }
     }
 
-    private void validateMembership(Long roomId, Long userId) {
+    private void validateMembership(Long roomId, String userId) {
         if (!roomRepository.existsMemberInRoom(roomId, userId)) {
             throw new UnauthorizedException("User is not a member of this room");
         }
@@ -302,18 +404,20 @@ public class RoomService {
         return UUID.randomUUID().toString().substring(0, 8).toUpperCase();
     }
 
-    private RoomResponse toRoomResponse(Room room, Long currentUserId) {
+    private RoomResponse toRoomResponse(Room room, String currentUserId) {
         long memberCount = roomMemberRepository.countByRoomId(room.getId());
         boolean isOwner = roomRepository.isOwnerOfRoom(room.getId(), currentUserId);
         boolean isMember = roomRepository.existsMemberInRoom(room.getId(), currentUserId);
 
         // Map channels
-        List<RoomResponse.ChannelInfo> channels = room.getChannels().stream()
+        List<RoomResponse.ChannelInfo> channels = Optional.ofNullable(room.getChannels())
+                .orElse(Collections.emptyList())
+                .stream()
                 .map(channel -> RoomResponse.ChannelInfo.builder()
-                .id(channel.getId())
-                .name(channel.getName())
-                .build())
-                .collect(java.util.stream.Collectors.toList());
+                        .id(channel.getId())
+                        .name(channel.getName())
+                        .build())
+                .toList();
 
         return RoomResponse.builder()
                 .id(room.getId())
@@ -332,27 +436,41 @@ public class RoomService {
     }
 
     private RoomSummary toRoomSummary(Room room) {
-        long memberCount = roomMemberRepository.countByRoomId(room.getId());
-
-        return RoomSummary.builder()
-                .id(room.getId())
-                .name(room.getName())
-                .memberCount((int) memberCount)
-                .createdAt(room.getCreatedAt())
-                .lastActivity(room.getUpdatedAt())
-                .build();
+        return toRoomSummary(room, null, null);
     }
 
     private MemberResponse toMemberResponse(RoomMember member) {
-        // TODO: Fetch user details from User Service via FeignClient
+        UserClient.UserInfo userInfo = userClient.getBasicById(member.getId().getUserId());
         return MemberResponse.builder()
                 .userId(member.getId().getUserId())
-                .username("user" + member.getId().getUserId()) // Placeholder
-                .fullName("User " + member.getId().getUserId()) // Placeholder
-                .avatarUrl(null)
+                .username(userInfo.getUsername())
+                .fullName(userInfo.getFullName())
+                .avatarUrl(userInfo.getAvatarUrl())
                 .isOwner(member.getIsOwner())
                 .joinedAt(member.getJoinedAt())
                 .build();
+    }
+
+    private MemberResponse toMemberResponse(RoomMember member, Map<String, UserClient.UserInfo> userInfoMap) {
+        UserClient.UserInfo userInfo = userInfoMap.get(member.getId().getUserId());
+        return MemberResponse.builder()
+                .userId(member.getId().getUserId())
+                .username(userInfo.getUsername())
+                .fullName(userInfo.getFullName())
+                .avatarUrl(userInfo.getAvatarUrl())
+                .isOwner(member.getIsOwner())
+                .joinedAt(member.getJoinedAt())
+                .build();
+    }
+
+    private List<MemberResponse> toMemberResponseList(List<RoomMember> roomMembers) {
+        List<String> userIds = roomMembers.stream().map(RoomMember::getUserId).toList();
+        List<UserClient.UserInfo> userInfos = userClient.getBasicBulkByIds(new KeycloakUserIdList(userIds));
+        Map<String, UserClient.UserInfo> userInfoMap = userInfos.stream()
+                .collect(Collectors.toMap(UserClient.UserInfo::getId, Function.identity()));
+        return roomMembers.stream()
+                .map(roomMember -> toMemberResponse(roomMember, userInfoMap))
+                .collect(Collectors.toList());
     }
 
     // ========== DIRECT MESSAGE METHODS ==========
@@ -366,8 +484,8 @@ public class RoomService {
      * no channel concept
      */
     @Transactional
-    public RoomResponse createOrGetDirectMessage(CreateDirectMessageRequest request, Long currentUserId) {
-        Long recipientId = request.getRecipientUserId();
+    public RoomResponse createOrGetDirectMessage(CreateDirectMessageRequest request, String currentUserId) {
+        String recipientId = request.getRecipientUserId();
 
         log.info("Creating/Getting DM between user {} and user {}", currentUserId, recipientId);
 
@@ -380,8 +498,7 @@ public class RoomService {
         Optional<Room> existingDM = roomRepository.findDirectMessageRoom(
                 RoomType.DIRECT_MESSAGE,
                 currentUserId,
-                recipientId
-        );
+                recipientId);
 
         if (existingDM.isPresent()) {
             log.info("DM room already exists: {}", existingDM.get().getId());
@@ -389,15 +506,21 @@ public class RoomService {
         }
 
         // Create new DM room
-        // TODO: Fetch recipient user info from User Service to generate room name
-        String dmName = "DM: " + currentUserId + " - " + recipientId;
+        String dmName;
+        try {
+            UserClient.UserInfo recipientInfo = userClient.getBasicById(recipientId);
+            dmName = "DM: " + recipientInfo.getFullName();
+        } catch (Exception e) {
+            log.warn("Failed to fetch recipient info for DM naming, using fallback");
+            dmName = "DM: " + currentUserId + " - " + recipientId;
+        }
 
         Room dmRoom = Room.builder()
                 .name(dmName)
                 .description("Direct message conversation")
                 .creatorId(currentUserId)
                 .isPublic(false)
-                .roomType(RoomType.DIRECT_MESSAGE.toString())
+                .roomType(RoomType.DIRECT_MESSAGE)
                 .maxMembers(2)
                 .inviteCode(null) // No invite code for DMs
                 .build();
@@ -419,7 +542,19 @@ public class RoomService {
 
         roomMemberRepository.saveAll(List.of(member1, member2));
 
-        log.info("Created new DM room: {}", savedRoom.getId());
+        // Create default "General" channel for DMs too so they can have messages
+        Channel generalChannel = Channel.builder()
+                .name("General")
+                .room(savedRoom)
+                .build();
+
+        // Initialize channels list if needed
+        List<Channel> channels = new ArrayList<>();
+        channels.add(generalChannel);
+        savedRoom.setChannels(channels);
+        roomRepository.save(savedRoom);
+
+        log.info("Created new DM room: {} with default channel", savedRoom.getId());
         return toRoomResponse(savedRoom, currentUserId);
     }
 
@@ -427,12 +562,127 @@ public class RoomService {
      * Get all DM rooms for current user
      */
     @Transactional(readOnly = true)
-    public List<RoomSummary> getUserDirectMessages(Long userId) {
+    public List<RoomSummary> getUserDirectMessages(String userId) {
         log.info("Getting DMs for user: {}", userId);
 
-        return roomRepository.findRoomsByUserId(userId).stream()
-                .filter(room -> room.getRoomType() == RoomType.DIRECT_MESSAGE.toString())
-                .map(this::toRoomSummary)
-                .collect(Collectors.toList());
+        List<Room> dmRooms = roomRepository.findRoomsByUserId(userId).stream()
+                .filter(room -> room.getRoomType() == RoomType.DIRECT_MESSAGE)
+                .toList();
+
+        if (dmRooms.isEmpty()) {
+            return List.of();
+        }
+
+        // Collect all distinct recipient IDs
+        Set<String> recipientIds = new HashSet<>();
+        for (Room room : dmRooms) {
+            List<RoomMember> members = roomMemberRepository.findByRoomId(room.getId());
+            members.stream()
+                    .filter(m -> !m.getId().getUserId().equals(userId))
+                    .map(m -> m.getId().getUserId())
+                    .findFirst()
+                    .ifPresent(recipientIds::add);
+        }
+
+        // Bulk fetch recipient info
+        Map<String, UserClient.UserInfo> userInfoMap = new HashMap<>();
+        try {
+            if (!recipientIds.isEmpty()) {
+                List<UserClient.UserInfo> userInfos = userClient
+                        .getBasicBulkByIds(new KeycloakUserIdList(new ArrayList<>(recipientIds)));
+                userInfoMap = userInfos.stream()
+                        .collect(Collectors.toMap(UserClient.UserInfo::getId, Function.identity()));
+            }
+        } catch (Exception e) {
+            log.warn("Failed to bulk fetch recipient info for DMs: {}", e.getMessage());
+        }
+
+        final Map<String, UserClient.UserInfo> finalUserInfoMap = userInfoMap;
+        return dmRooms.stream()
+                .map(room -> toRoomSummary(room, userId, finalUserInfoMap))
+                .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public List<RoomSummary> searchRooms(String query, String userId) {
+        return roomRepository.searchRooms(query, userId).stream()
+                .map(room -> toRoomSummary(room, userId, null))
+                .toList();
+    }
+
+    @Transactional
+    public void markRoomAsRead(Long roomId, String userId) {
+        RoomMemberId memberId = new RoomMemberId(roomId, userId);
+        RoomMember member = roomMemberRepository.findById(memberId)
+                .orElseThrow(() -> new IllegalArgumentException("User is not a member of this room"));
+
+        member.setLastRead(java.time.Instant.now());
+        roomMemberRepository.save(member);
+    }
+
+    private RoomSummary toRoomSummary(Room room, String userId, Map<String, UserClient.UserInfo> userInfoMap) {
+        long memberCount = roomMemberRepository.countByRoomId(room.getId());
+        long unreadCount = 0;
+
+        String recipientId = null;
+        String recipientName = null;
+        String recipientAvatar = null;
+        Boolean isOnline = false;
+
+        if (userId != null) {
+            Optional<RoomMember> member = roomMemberRepository.findById(new RoomMemberId(room.getId(), userId));
+            if (member.isPresent()) {
+                java.time.Instant lastRead = member.get().getLastRead();
+                java.time.Instant since = lastRead != null ? lastRead : member.get().getJoinedAt();
+                unreadCount = messageRepository.countByChannel_Room_IdAndCreatedAtAfter(room.getId(), since);
+            }
+
+            // Populate recipient info for Direct Messages
+            if (room.getRoomType() == RoomType.DIRECT_MESSAGE) {
+                // Explicitly fetch members to avoid lazy loading issues
+                List<RoomMember> members = roomMemberRepository.findByRoomId(room.getId());
+
+                // Find the other member
+                Optional<RoomMember> otherMember = members.stream()
+                        .filter(m -> !m.getId().getUserId().equals(userId))
+                        .findFirst();
+
+                if (otherMember.isPresent()) {
+                    String otherUserId = otherMember.get().getId().getUserId();
+                    try {
+                        UserClient.UserInfo userInfo = (userInfoMap != null) ? userInfoMap.get(otherUserId) : null;
+
+                        if (userInfo == null) {
+                            // Single fetch fallback if not in map
+                            userInfo = userClient.getBasicById(otherUserId);
+                        }
+
+                        if (userInfo != null) {
+                            recipientId = userInfo.getId();
+                            recipientName = userInfo.getFullName();
+                            recipientAvatar = userInfo.getAvatarUrl();
+                        }
+                        // isOnline logic would go here if available (e.g. from presence service)
+                    } catch (Exception e) {
+                        log.error("Failed to fetch recipient info for room {}", room.getId(), e);
+                    }
+                } else {
+                    log.warn("No other member found in DM room {} (members found: {})", room.getId(), members.size());
+                }
+            }
+        }
+
+        return RoomSummary.builder()
+                .id(room.getId())
+                .name(room.getName())
+                .memberCount((int) memberCount)
+                .createdAt(room.getCreatedAt())
+                .lastActivity(room.getUpdatedAt())
+                .unreadCount(unreadCount)
+                .recipientId(recipientId)
+                .recipientName(recipientName)
+                .recipientAvatar(recipientAvatar)
+                .isOnline(isOnline)
+                .build();
     }
 }
